# monte-carlo-risk-engine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md
data/: portfolio.csv  portfolio_djia.csv
data/history/djia/: AAPL.csv  AMGN.csv  AMZN.csv  AXP.csv  BA.csv  CAT.csv  CRM.csv  CSCO.csv  CVX.csv  DIS.csv  GS.csv  HD.csv  HON.csv  IBM.csv  JNJ.csv  JPM.csv  KO.csv  MCD.csv  MMM.csv  MRK.csv  MSFT.csv  NKE.csv  NVDA.csv  PG.csv  SHW.csv  TRV.csv  UNH.csv  V.csv  VZ.csv  WMT.csv
data/scripts/: download_djia_history.py  generate_djia_portfolio.py  generate_market_data.py
include/: cholesky.hpp  djia_builder.hpp  market_data_history.hpp  market_snapshot.hpp  monte_carlo.hpp  portfolio.hpp  realized_risk.hpp  trading_day_utils.hpp
src/: cholesky.cpp  djia_builder.cpp  main.cpp  market_data_history.cpp  market_snapshot.cpp  monte_carlo.cpp  portfolio.cpp  realized_risk.cpp  trading_day_utils.cpp
tests/: test_bs.cpp  test_cholesky.cpp  test_history.cpp  test_mc.cpp  test_portfolio.cpp  test_realized.cpp
